<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fade"
    tools:context=".CalculatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_calculator"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:contentDescription="@string/image_view_calculator_header_description"
            android:scaleType="centerCrop"
            android:src="@drawable/image_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_input"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toTopOf="@id/card_view_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_calculator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <ImageView
                    android:id="@+id/image_view_calculator_coffee"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/image_view_calculator_coffee_description"
                    android:src="@drawable/ic_coffee_beans"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/image_view_calculator_water"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_edit_coffee"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="200dp"
                    android:layout_marginEnd="24dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/coffee_in_grams"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/text_edit_water"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_calculator_coffee"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_edit_box_coffee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="15" />

                </com.google.android.material.textfield.TextInputLayout>


                <ImageView
                    android:id="@+id/image_view_calculator_water"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/image_view_calculator_coffee"
                    android:layout_marginStart="24dp"
                    android:layout_toStartOf="@id/text_edit_coffee"
                    android:contentDescription="@string/image_view_calculator_water_description"
                    android:src="@drawable/ic_water_drop"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_view_calculator_coffee" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_edit_water"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/water_in_grams"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_calculator_water"
                    app:layout_constraintTop_toBottomOf="@id/text_edit_coffee">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_edit_box_water"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_result"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toTopOf="@id/card_view_calculator_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_input">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_result_card"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/image_view_result_card_description"
                    android:src="@drawable/ic_coffee_beans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/text_view_calculator_result"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_calculator_result"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="24dp"
                    android:paddingStart="12dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/off_black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_result_card"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="You need 30 grams of coffee!" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/card_view_calculator_switch"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toTopOf="@id/button_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_result">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_dose"
                    style="@style/Widget.AppCompat.CompoundButton.Switch"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="48dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/switch_dose_coffee"
                    android:textColor="@color/off_black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/switch_coffee_water"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_coffee_water"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/switch_calculate"
                    android:textColor="@color/off_black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_dose" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="62dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_calculator_switch" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="@+id/button_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_clear"
            app:layout_constraintTop_toTopOf="@+id/button_clear" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/layout_bottom_bar" android:id="@+id/bottomSheet" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>